// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`border renders 0 1`] = `
Array [
  .c0 {
  border: 0;
}

<div
    className="c0"
  />,
  .c0 {
  border: 0;
}

<div
    className="c0"
  />,
  .c0 {
  border: 0;
}

<div
    className="c0"
  />,
  .c0 {
  border: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`border renders function 1`] = `
Array [
  .c0 {
  border: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  border: has;
}

<div
    className="c0"
  />,
  .c0 {
  border: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  border: has;
}

<div
    className="c0"
  />,
]
`;

exports[`border renders invalid theme path 1`] = `
Array [
  .c0 {
  border: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`border renders negative number 1`] = `
Array [
  .c0 {
  border: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  border: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  border: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  border: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`border renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    border: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    border: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`border renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    border: July;
  }
}

@media April {
  .c0 {
    border: August;
  }
}

@media January {
  .c0 {
    border: September;
  }
}

@media April {
  .c0 {
    border: November;
  }
}

@media June {
  .c0 {
    border: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    border: July;
  }
}

@media April {
  .c0 {
    border: August;
  }
}

@media January {
  .c0 {
    border: September;
  }
}

@media April {
  .c0 {
    border: November;
  }
}

@media June {
  .c0 {
    border: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border: January;
  }
}

@media April {
  .c0 {
    border: December;
  }
}

@media January {
  .c0 {
    border: April;
  }
}

@media April {
  .c0 {
    border: May;
  }
}

@media June {
  .c0 {
    border: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border: January;
  }
}

@media April {
  .c0 {
    border: December;
  }
}

@media January {
  .c0 {
    border: April;
  }
}

@media April {
  .c0 {
    border: May;
  }
}

@media June {
  .c0 {
    border: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`border renders postitive number 1`] = `
Array [
  .c0 {
  border: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  border: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  border: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  border: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`border renders string 1`] = `
Array [
  .c0 {
  border: July;
}

<div
    className="c0"
  />,
  .c0 {
  border: July;
}

<div
    className="c0"
  />,
  .c0 {
  border: June;
}

<div
    className="c0"
  />,
  .c0 {
  border: June;
}

<div
    className="c0"
  />,
]
`;

exports[`border renders valid theme path 1`] = `
Array [
  .c0 {
  border: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
